<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.converterdojo.pafsilva.androidconverterdojo.ConverterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="16dp"
        android:textSize="30sp"
        android:text="@string/main_title" />

    <EditText
        android:id="@+id/edtInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/input_number"
        android:backgroundTint="@color/colorPrimary"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/convert_from" />

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/convert_to" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"/>


</LinearLayout>
